--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "Cloning YouTube with vanillajs and nodejs",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "@babel/core": "^7.10.5",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "helmet": "^3.23.3",
+    "morgan": "^1.10.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon --exec babel-node init.js"
   },
   "author": "Kunal Gaurav",
   "license": "ISC"
